[gd_scene load_steps=11 format=3 uid="uid://bjehe02ylhmey"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_o5lbe"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/terrain_add.gd" id="2_t1crj"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_tkx7m"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_s5qft"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_s1aoj"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_1vaa0"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_tc36s"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_tqi7f"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_tfqvn"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_j2qn2"]

[node name="TerrainAdd" instance=ExtResource("1_o5lbe")]
script = ExtResource("2_t1crj")

[node name="where" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_WHERE"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="where" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="where" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="where" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_s5qft")
texture_pressed = ExtResource("5_s1aoj")
texture_hover = ExtResource("6_1vaa0")
texture_focused = ExtResource("6_1vaa0")

[node name="anchor" type="Control" parent="where/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="where/picker_button/anchor" index="0" instance=ExtResource("7_tc36s")]

[node name="tile_type" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_TILE_TYPE"
vertical_alignment = 1

[node name="tile_type" type="LineEdit" parent="tile_type" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="type_picker_button" type="TextureButton" parent="tile_type" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_s5qft")
texture_pressed = ExtResource("5_s1aoj")
texture_hover = ExtResource("6_1vaa0")
texture_focused = ExtResource("6_1vaa0")

[node name="anchor" type="Control" parent="tile_type/type_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="tile_type/type_picker_button/anchor" index="0" instance=ExtResource("7_tc36s")]

[node name="template" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_TEMPLATE"
vertical_alignment = 1

[node name="template" type="LineEdit" parent="template" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="template_picker_button" type="TextureButton" parent="template" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_s5qft")
texture_pressed = ExtResource("5_s1aoj")
texture_hover = ExtResource("6_1vaa0")
texture_focused = ExtResource("6_1vaa0")

[node name="anchor" type="Control" parent="template/template_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="template/template_picker_button/anchor" index="0" instance=ExtResource("7_tc36s")]

[node name="player_side" type="Label" parent="." index="7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_right = -250.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_PLAYER_SIDE"
vertical_alignment = 1

[node name="side" type="LineEdit" parent="player_side" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="side_picker_button" type="TextureButton" parent="player_side" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_s5qft")
texture_pressed = ExtResource("5_s1aoj")
texture_hover = ExtResource("6_1vaa0")
texture_focused = ExtResource("6_1vaa0")

[node name="anchor" type="Control" parent="player_side/side_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="player_side/side_picker_button/anchor" index="0" instance=ExtResource("7_tc36s")]

[node name="rotation" type="Label" parent="." index="8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 350.0
offset_right = -250.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_ROTATION"
vertical_alignment = 1

[node name="rotation" type="LineEdit" parent="rotation" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
text = "0"
alignment = 1

[node name="smoke" type="Label" parent="." index="9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 400.0
offset_right = -250.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_SMOKE"
vertical_alignment = 1

[node name="smoke_button" type="TextureButton" parent="smoke" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_tqi7f")
texture_pressed = ExtResource("9_tfqvn")
texture_hover = ExtResource("10_j2qn2")
texture_focused = ExtResource("10_j2qn2")

[node name="label" type="Label" parent="smoke/smoke_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tkx7m")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="where/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="where/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="where/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="text_changed" from="tile_type/tile_type" to="." method="_on_text_changed"]
[connection signal="pressed" from="tile_type/type_picker_button" to="." method="_on_type_picker_button_pressed"]
[connection signal="text_changed" from="template/template" to="." method="_on_text_changed"]
[connection signal="pressed" from="template/template_picker_button" to="." method="_on_template_picker_button_pressed"]
[connection signal="text_changed" from="player_side/side" to="." method="_on_text_changed"]
[connection signal="pressed" from="player_side/side_picker_button" to="." method="_on_side_picker_button_pressed"]
[connection signal="text_changed" from="rotation/rotation" to="." method="_on_text_changed"]
[connection signal="pressed" from="smoke/smoke_button" to="." method="_on_smoke_button_pressed"]
